# pyrift

./: LICENSE  README.md  pyproject.toml
src/rift/: importdata.py
