[project]
name = "rift"
version = "0.1.0"
description = "Python package for RIFT-specific EEG analysis"
authors = [
    {name = "Christos Dalamarinis",email = "dalamarinischristos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "rift", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
